add other components

--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,12 @@
 }
 
 #root {
-  background-color: rgb(228, 228, 228);
+  background-color: white;
 }
 
 .App {
-  background-color: rgba(52, 58, 64, 1);
   width: 80%;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   padding: 0px 0px;
   -webkit-box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
@@ -19,7 +18,16 @@
   box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
   color: white;
 }
-
+.home {
+  background-color: rgba(52, 58, 64, 0.8);
+  top: 0;
+  height: 100%;
+  padding: 50px;
+}
+.home-header {
+  margin: 0;
+  padding: 0;
+}
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -28,8 +36,18 @@
   list-style: none;
   color: white;
 }
+.btn-main {
+  margin: 20px;
+}
+.carousel-main {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(52, 58, 64, 1);
+}
 .carousel {
   padding-bottom: 15vh;
+  background-color: rgba(52, 58, 64, 0.8);
 }
 .carousel-img {
   opacity: 0.8;
@@ -40,32 +58,42 @@
   margin: 0 auto;
   border-radius: 7px;
 }
-.lottie-section {
-  min-height: 30vh;
-  width: 100%;
-  text-align: center;
-  padding: 30px;
-  background-color: rgb(255, 124, 68);
-  display: flex;
-}
-.lottie-section h3 {
-  text-align: left;
-}
 .lottie-container {
-  width: 20%;
-  float: left;
+  background-color: rgba(52, 58, 64, 0.8);
+  width: 100%;
+  padding: 0px 0px;
+  margin: 0px 0px;
 }
+.lottie-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+}
+
 footer {
   min-height: 15vh;
-  background-color: #a6bace;
   width: 100%;
-  margin-top: 15vh;
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 11px;
+  padding: 6vh;
   color: white;
+  background-color: rgb(172, 96, 69);
 }
 footer a {
   color: white;
+  margin: 5vh;
+}
+footer a:hover {
+  text-decoration: none;
+  color: pink;
+}
+footer h4 {
+  font-size: 50px;
+  margin-bottom: 40px;
+}
+/* INCOME  */
+.income-div {
+  color: rgb(36, 33, 33);
 }
