--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App {
   width: 80%;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 0px 0px;
   -webkit-box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
@@ -18,6 +18,18 @@
   box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
   color: white;
 }
+.form-div {
+  background-color: white;
+  width: 50%;
+  margin: auto auto;
+  position: relative;
+  top: 200px;
+  padding: 4%;
+  -webkit-box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
+  -moz-box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
+  box-shadow: 0px 0px 73px 40px rgba(242, 242, 242, 1);
+}
+
 .home {
   background-color: rgba(52, 58, 64, 0.8);
   top: 0;
